// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`draughts game descriptor > askForParameters() + addPlayer() > enrolls each allowed players with a valid JSON schema 1`] = `
{
  "availableSeats": 1,
  "cameras": [
    {
      "alpha": 4.71238898038469,
      "beta": 0.39269908169872414,
      "elevation": 37,
      "hash": "0-0--2-4.71238898038469-0.39269908169872414-37",
      "index": 0,
      "playerId": "player-1",
      "target": [
        0,
        0,
        -2,
      ],
    },
  ],
  "created": 1691859511667,
  "guestIds": [],
  "hands": [],
  "history": [],
  "id": "game-unique-id",
  "kind": "draughts",
  "locales": {
    "en": {
      "title": "Draughts",
    },
    "fr": {
      "title": "Dames",
    },
  },
  "meshes": [
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-1",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-2",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-3",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-4",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-5",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-6",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-7",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-8",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-9",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-10",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-11",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-12",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-13",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-14",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-15",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-16",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-17",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-18",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-19",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-20",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-1",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-2",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-3",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-4",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-5",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-6",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-7",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-8",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-9",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-10",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-11",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-12",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-13",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-14",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-15",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-16",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-17",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-18",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-19",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-20",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "anchorable": {
        "anchors": [
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-0",
            "snappedIds": [
              "white-6",
            ],
            "x": -13.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-2",
            "snappedIds": [
              "white-16",
            ],
            "x": -13.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-4",
            "snappedIds": [],
            "x": -13.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-6",
            "snappedIds": [
              "black-6",
            ],
            "x": -13.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-8",
            "snappedIds": [
              "black-16",
            ],
            "x": -13.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-1",
            "snappedIds": [
              "white-11",
            ],
            "x": -10.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-3",
            "snappedIds": [
              "white-1",
            ],
            "x": -10.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-5",
            "snappedIds": [],
            "x": -10.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-7",
            "snappedIds": [
              "black-11",
            ],
            "x": -10.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-9",
            "snappedIds": [
              "black-1",
            ],
            "x": -10.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-0",
            "snappedIds": [
              "white-7",
            ],
            "x": -7.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-2",
            "snappedIds": [
              "white-17",
            ],
            "x": -7.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-4",
            "snappedIds": [],
            "x": -7.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-6",
            "snappedIds": [
              "black-7",
            ],
            "x": -7.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-8",
            "snappedIds": [
              "black-17",
            ],
            "x": -7.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-1",
            "snappedIds": [
              "white-12",
            ],
            "x": -4.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-3",
            "snappedIds": [
              "white-2",
            ],
            "x": -4.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-5",
            "snappedIds": [],
            "x": -4.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-7",
            "snappedIds": [
              "black-12",
            ],
            "x": -4.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-9",
            "snappedIds": [
              "black-2",
            ],
            "x": -4.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-0",
            "snappedIds": [
              "white-8",
            ],
            "x": -1.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-2",
            "snappedIds": [
              "white-18",
            ],
            "x": -1.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-4",
            "snappedIds": [],
            "x": -1.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-6",
            "snappedIds": [
              "black-8",
            ],
            "x": -1.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-8",
            "snappedIds": [
              "black-18",
            ],
            "x": -1.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-1",
            "snappedIds": [
              "white-13",
            ],
            "x": 1.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-3",
            "snappedIds": [
              "white-3",
            ],
            "x": 1.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-5",
            "snappedIds": [],
            "x": 1.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-7",
            "snappedIds": [
              "black-13",
            ],
            "x": 1.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-9",
            "snappedIds": [
              "black-3",
            ],
            "x": 1.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-0",
            "snappedIds": [
              "white-9",
            ],
            "x": 4.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-2",
            "snappedIds": [
              "white-19",
            ],
            "x": 4.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-4",
            "snappedIds": [],
            "x": 4.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-6",
            "snappedIds": [
              "black-9",
            ],
            "x": 4.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-8",
            "snappedIds": [
              "black-19",
            ],
            "x": 4.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-1",
            "snappedIds": [
              "white-14",
            ],
            "x": 7.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-3",
            "snappedIds": [
              "white-4",
            ],
            "x": 7.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-5",
            "snappedIds": [],
            "x": 7.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-7",
            "snappedIds": [
              "black-14",
            ],
            "x": 7.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-9",
            "snappedIds": [
              "black-4",
            ],
            "x": 7.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-0",
            "snappedIds": [
              "white-10",
            ],
            "x": 10.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-2",
            "snappedIds": [
              "white-20",
            ],
            "x": 10.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-4",
            "snappedIds": [],
            "x": 10.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-6",
            "snappedIds": [
              "black-10",
            ],
            "x": 10.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-8",
            "snappedIds": [
              "black-20",
            ],
            "x": 10.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-1",
            "snappedIds": [
              "white-15",
            ],
            "x": 13.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-3",
            "snappedIds": [
              "white-5",
            ],
            "x": 13.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-5",
            "snappedIds": [],
            "x": 13.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-7",
            "snappedIds": [
              "black-15",
            ],
            "x": 13.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-9",
            "snappedIds": [
              "black-5",
            ],
            "x": 13.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "depth": 45,
            "height": 0.01,
            "id": "score",
            "max": 40,
            "snappedIds": [],
            "width": 45,
            "y": -0.3,
          },
        ],
      },
      "borderRadius": 0.8,
      "depth": 30,
      "faceUV": [
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          1,
          1,
          0,
          0,
        ],
        [
          0,
          0,
          0,
          0,
        ],
      ],
      "height": 0.6,
      "id": "board",
      "shape": "roundedTile",
      "texture": "board.ktx2",
      "width": 30,
      "y": 0.3,
    },
  ],
  "messages": [],
  "name": "draughts",
  "ownerId": "",
  "playerIds": [
    "player-1",
  ],
  "preferences": [
    {
      "color": undefined,
      "playerId": "player-1",
      "side": "white",
    },
  ],
}
`;

exports[`draughts game descriptor > askForParameters() + addPlayer() > enrolls each allowed players with a valid JSON schema 2`] = `
{
  "availableSeats": 0,
  "cameras": [
    {
      "alpha": 4.71238898038469,
      "beta": 0.39269908169872414,
      "elevation": 37,
      "hash": "0-0--2-4.71238898038469-0.39269908169872414-37",
      "index": 0,
      "playerId": "player-1",
      "target": [
        0,
        0,
        -2,
      ],
    },
    {
      "alpha": 1.5707963267948966,
      "beta": 0.39269908169872414,
      "elevation": 37,
      "hash": "0-0-2-1.5707963267948966-0.39269908169872414-37",
      "index": 0,
      "playerId": "player-2",
      "target": [
        0,
        0,
        2,
      ],
    },
  ],
  "created": 1691859511667,
  "guestIds": [],
  "hands": [],
  "history": [],
  "id": "game-unique-id",
  "kind": "draughts",
  "locales": {
    "en": {
      "title": "Draughts",
    },
    "fr": {
      "title": "Dames",
    },
  },
  "meshes": [
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-1",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-2",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-3",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-4",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-5",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-6",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-7",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-8",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-9",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-10",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-11",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-12",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-13",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-14",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-15",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-16",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-17",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-18",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-19",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-20",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-1",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-2",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-3",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-4",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-5",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-6",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-7",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-8",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-9",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-10",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-11",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-12",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-13",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-14",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-15",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-16",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-17",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-18",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-19",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-20",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "anchorable": {
        "anchors": [
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-0",
            "snappedIds": [
              "white-6",
            ],
            "x": -13.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-2",
            "snappedIds": [
              "white-16",
            ],
            "x": -13.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-4",
            "snappedIds": [],
            "x": -13.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-6",
            "snappedIds": [
              "black-6",
            ],
            "x": -13.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-8",
            "snappedIds": [
              "black-16",
            ],
            "x": -13.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-1",
            "snappedIds": [
              "white-11",
            ],
            "x": -10.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-3",
            "snappedIds": [
              "white-1",
            ],
            "x": -10.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-5",
            "snappedIds": [],
            "x": -10.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-7",
            "snappedIds": [
              "black-11",
            ],
            "x": -10.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-9",
            "snappedIds": [
              "black-1",
            ],
            "x": -10.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-0",
            "snappedIds": [
              "white-7",
            ],
            "x": -7.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-2",
            "snappedIds": [
              "white-17",
            ],
            "x": -7.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-4",
            "snappedIds": [],
            "x": -7.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-6",
            "snappedIds": [
              "black-7",
            ],
            "x": -7.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-8",
            "snappedIds": [
              "black-17",
            ],
            "x": -7.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-1",
            "snappedIds": [
              "white-12",
            ],
            "x": -4.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-3",
            "snappedIds": [
              "white-2",
            ],
            "x": -4.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-5",
            "snappedIds": [],
            "x": -4.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-7",
            "snappedIds": [
              "black-12",
            ],
            "x": -4.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-9",
            "snappedIds": [
              "black-2",
            ],
            "x": -4.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-0",
            "snappedIds": [
              "white-8",
            ],
            "x": -1.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-2",
            "snappedIds": [
              "white-18",
            ],
            "x": -1.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-4",
            "snappedIds": [],
            "x": -1.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-6",
            "snappedIds": [
              "black-8",
            ],
            "x": -1.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-8",
            "snappedIds": [
              "black-18",
            ],
            "x": -1.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-1",
            "snappedIds": [
              "white-13",
            ],
            "x": 1.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-3",
            "snappedIds": [
              "white-3",
            ],
            "x": 1.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-5",
            "snappedIds": [],
            "x": 1.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-7",
            "snappedIds": [
              "black-13",
            ],
            "x": 1.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-9",
            "snappedIds": [
              "black-3",
            ],
            "x": 1.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-0",
            "snappedIds": [
              "white-9",
            ],
            "x": 4.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-2",
            "snappedIds": [
              "white-19",
            ],
            "x": 4.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-4",
            "snappedIds": [],
            "x": 4.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-6",
            "snappedIds": [
              "black-9",
            ],
            "x": 4.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-8",
            "snappedIds": [
              "black-19",
            ],
            "x": 4.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-1",
            "snappedIds": [
              "white-14",
            ],
            "x": 7.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-3",
            "snappedIds": [
              "white-4",
            ],
            "x": 7.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-5",
            "snappedIds": [],
            "x": 7.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-7",
            "snappedIds": [
              "black-14",
            ],
            "x": 7.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-9",
            "snappedIds": [
              "black-4",
            ],
            "x": 7.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-0",
            "snappedIds": [
              "white-10",
            ],
            "x": 10.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-2",
            "snappedIds": [
              "white-20",
            ],
            "x": 10.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-4",
            "snappedIds": [],
            "x": 10.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-6",
            "snappedIds": [
              "black-10",
            ],
            "x": 10.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-8",
            "snappedIds": [
              "black-20",
            ],
            "x": 10.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-1",
            "snappedIds": [
              "white-15",
            ],
            "x": 13.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-3",
            "snappedIds": [
              "white-5",
            ],
            "x": 13.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-5",
            "snappedIds": [],
            "x": 13.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-7",
            "snappedIds": [
              "black-15",
            ],
            "x": 13.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-9",
            "snappedIds": [
              "black-5",
            ],
            "x": 13.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "depth": 45,
            "height": 0.01,
            "id": "score",
            "max": 40,
            "snappedIds": [],
            "width": 45,
            "y": -0.3,
          },
        ],
      },
      "borderRadius": 0.8,
      "depth": 30,
      "faceUV": [
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          1,
          1,
          0,
          0,
        ],
        [
          0,
          0,
          0,
          0,
        ],
      ],
      "height": 0.6,
      "id": "board",
      "shape": "roundedTile",
      "texture": "board.ktx2",
      "width": 30,
      "y": 0.3,
    },
  ],
  "messages": [],
  "name": "draughts",
  "ownerId": "",
  "playerIds": [
    "player-1",
    "player-2",
  ],
  "preferences": [
    {
      "color": undefined,
      "playerId": "player-1",
      "side": "white",
    },
    {
      "color": undefined,
      "playerId": "player-2",
      "side": "black",
    },
  ],
}
`;

exports[`draughts game descriptor > build() > builds game setup 1`] = `
{
  "bags": Map {
    "white" => [
      "white-1",
      "white-2",
      "white-3",
      "white-4",
      "white-5",
      "white-6",
      "white-7",
      "white-8",
      "white-9",
      "white-10",
      "white-11",
      "white-12",
      "white-13",
      "white-14",
      "white-15",
      "white-16",
      "white-17",
      "white-18",
      "white-19",
      "white-20",
    ],
    "black" => [
      "black-1",
      "black-2",
      "black-3",
      "black-4",
      "black-5",
      "black-6",
      "black-7",
      "black-8",
      "black-9",
      "black-10",
      "black-11",
      "black-12",
      "black-13",
      "black-14",
      "black-15",
      "black-16",
      "black-17",
      "black-18",
      "black-19",
      "black-20",
    ],
  },
  "meshes": [
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-1",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-2",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-3",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-4",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-5",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-6",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-7",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-8",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-9",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-10",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-11",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-12",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-13",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-14",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-15",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-16",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-17",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-18",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-19",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "white-20",
      "movable": {
        "kind": "white",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "white",
        ],
      },
      "texture": "#e4e1dfff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-1",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-2",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-3",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-4",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-5",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-6",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-7",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-8",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-9",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-10",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-11",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-12",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-13",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-14",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-15",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-16",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-17",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-18",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-19",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "diameter": 2.9,
      "height": 0.5,
      "id": "black-20",
      "movable": {
        "kind": "black",
      },
      "shape": "roundToken",
      "stackable": {
        "kinds": [
          "black",
        ],
      },
      "texture": "#633b21ff",
      "y": 0.85,
    },
    {
      "anchorable": {
        "anchors": [
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-0",
            "snappedIds": [],
            "x": -13.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-2",
            "snappedIds": [],
            "x": -13.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-4",
            "snappedIds": [],
            "x": -13.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-6",
            "snappedIds": [],
            "x": -13.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-0-8",
            "snappedIds": [],
            "x": -13.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-1",
            "snappedIds": [],
            "x": -10.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-3",
            "snappedIds": [],
            "x": -10.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-5",
            "snappedIds": [],
            "x": -10.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-7",
            "snappedIds": [],
            "x": -10.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-1-9",
            "snappedIds": [],
            "x": -10.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-0",
            "snappedIds": [],
            "x": -7.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-2",
            "snappedIds": [],
            "x": -7.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-4",
            "snappedIds": [],
            "x": -7.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-6",
            "snappedIds": [],
            "x": -7.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-2-8",
            "snappedIds": [],
            "x": -7.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-1",
            "snappedIds": [],
            "x": -4.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-3",
            "snappedIds": [],
            "x": -4.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-5",
            "snappedIds": [],
            "x": -4.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-7",
            "snappedIds": [],
            "x": -4.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-3-9",
            "snappedIds": [],
            "x": -4.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-0",
            "snappedIds": [],
            "x": -1.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-2",
            "snappedIds": [],
            "x": -1.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-4",
            "snappedIds": [],
            "x": -1.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-6",
            "snappedIds": [],
            "x": -1.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-4-8",
            "snappedIds": [],
            "x": -1.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-1",
            "snappedIds": [],
            "x": 1.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-3",
            "snappedIds": [],
            "x": 1.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-5",
            "snappedIds": [],
            "x": 1.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-7",
            "snappedIds": [],
            "x": 1.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-5-9",
            "snappedIds": [],
            "x": 1.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-0",
            "snappedIds": [],
            "x": 4.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-2",
            "snappedIds": [],
            "x": 4.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-4",
            "snappedIds": [],
            "x": 4.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-6",
            "snappedIds": [],
            "x": 4.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-6-8",
            "snappedIds": [],
            "x": 4.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-1",
            "snappedIds": [],
            "x": 7.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-3",
            "snappedIds": [],
            "x": 7.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-5",
            "snappedIds": [],
            "x": 7.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-7",
            "snappedIds": [],
            "x": 7.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-7-9",
            "snappedIds": [],
            "x": 7.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-0",
            "snappedIds": [],
            "x": 10.5,
            "y": 0.3,
            "z": -13.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-2",
            "snappedIds": [],
            "x": 10.5,
            "y": 0.3,
            "z": -7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-4",
            "snappedIds": [],
            "x": 10.5,
            "y": 0.3,
            "z": -1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-6",
            "snappedIds": [],
            "x": 10.5,
            "y": 0.3,
            "z": 4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-8-8",
            "snappedIds": [],
            "x": 10.5,
            "y": 0.3,
            "z": 10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-1",
            "snappedIds": [],
            "x": 13.5,
            "y": 0.3,
            "z": -10.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-3",
            "snappedIds": [],
            "x": 13.5,
            "y": 0.3,
            "z": -4.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-5",
            "snappedIds": [],
            "x": 13.5,
            "y": 0.3,
            "z": 1.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-7",
            "snappedIds": [],
            "x": 13.5,
            "y": 0.3,
            "z": 7.5,
          },
          {
            "diameter": 2.9,
            "height": 0.01,
            "id": "pawn-9-9",
            "snappedIds": [],
            "x": 13.5,
            "y": 0.3,
            "z": 13.5,
          },
          {
            "depth": 45,
            "height": 0.01,
            "id": "score",
            "max": 40,
            "snappedIds": [],
            "width": 45,
            "y": -0.3,
          },
        ],
      },
      "borderRadius": 0.8,
      "depth": 30,
      "faceUV": [
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          0.1,
          0.1,
          0,
          0,
        ],
        [
          1,
          1,
          0,
          0,
        ],
        [
          0,
          0,
          0,
          0,
        ],
      ],
      "height": 0.6,
      "id": "board",
      "shape": "roundedTile",
      "texture": "board.ktx2",
      "width": 30,
      "y": 0.3,
    },
  ],
  "slots": [
    {
      "anchorId": "pawn-0-0",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-2-0",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-4-0",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-6-0",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-8-0",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-1-1",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-3-1",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-5-1",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-7-1",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-9-1",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-0-2",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-2-2",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-4-2",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-6-2",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-8-2",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-1-3",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-3-3",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-5-3",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-7-3",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-9-3",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-0-4",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-2-4",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-4-4",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-6-4",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-8-4",
      "bagId": "white",
      "count": 1,
    },
    {
      "anchorId": "pawn-0-6",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-2-6",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-4-6",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-6-6",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-8-6",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-1-7",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-3-7",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-5-7",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-7-7",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-9-7",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-0-8",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-2-8",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-4-8",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-6-8",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-8-8",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-1-9",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-3-9",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-5-9",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-7-9",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-9-9",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-0-10",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-2-10",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-4-10",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-6-10",
      "bagId": "black",
      "count": 1,
    },
    {
      "anchorId": "pawn-8-10",
      "bagId": "black",
      "count": 1,
    },
  ],
}
`;
